cabal-version:      3.0
name:               bluefin-playground
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
-- copyright:
category:           Playground
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable bluefin-playground
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, bluefin
    hs-source-dirs:   src
    default-language: Haskell2010
